[tool.poetry]
name = "speedtest_tool-fastcom"
version = "0.1.0"
description = "speedtest_tool の fast.com 版"
authors = ["ETTSU-StarTail <46245666+ETTSU-StarTail@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
bokeh = "^2.4.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-black = "^0.2.4"
flake8-bugbear = "^22.1.11"
isort = "^5.10.1"
pre-commit = "^2.17.0"
mypy = "^0.931"
pyinstaller = "^4.9"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
